--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory(source/game_rule)
 add_subdirectory(source/input)
 add_subdirectory(source/tetris)
 add_subdirectory(source/tetromino)
+add_subdirectory(source/util)
