[Chore] Change code file structure so that only the Engine can run separately
Signed-off-by: Yusun Choi <tanks2438@outlook.kr>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(source/input)
 add_subdirectory(source/tetris)
 add_subdirectory(source/tetromino)
 add_subdirectory(source/util)
+add_subdirectory(source/engine)
