--- a/source/game_rule/CMakeLists.txt
+++ b/source/game_rule/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(game_rule game_rule.cpp)
+add_library(game_rule game_rule.cpp wall_kick.cpp)
 
 target_include_directories(game_rule PUBLIC ${PROJECT_SOURCE_DIR}/include)
