[Choir]빌드 수정중...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,5 @@ endif()
 if (WIN32)
     add_subdirectory(platform/Terminal/input)
     add_subdirectory(platform/Terminal/render)
+    add_subdirectory(platform/Terminal/main)
 endif()
