--- a/platform/Terminal/main/CMakeLists.txt
+++ b/platform/Terminal/main/CMakeLists.txt
@@ -1,1 +1,4 @@
 add_executable(terminal_main terminal_main.cpp)
+
+target_include_directories(terminal_main PRIVATE ${PROJECT_SOURCE_DIR}/platform/Terminal)
+target_include_directories(terminal_main PRIVATE ${PROJECT_SOURCE_DIR}/include)
