[Feat]윈도우 터미널 실행 성공

--- a/platform/Terminal/main/CMakeLists.txt
+++ b/platform/Terminal/main/CMakeLists.txt
@@ -2,3 +2,16 @@ add_executable(terminal_main terminal_main.cpp)
 
 target_include_directories(terminal_main PRIVATE ${PROJECT_SOURCE_DIR}/platform/Terminal)
 target_include_directories(terminal_main PRIVATE ${PROJECT_SOURCE_DIR}/include)
+
+target_link_options(terminal_main PRIVATE /VERBOSE:LIB)
+
+target_link_libraries(terminal_main
+    PRIVATE
+        engine
+        board
+        game_rule
+        tetromino
+        util
+        terminal_input
+        terminal_render
+)
