--- a/platform/linux/source/input/CMakeLists.txt
+++ b/platform/linux/source/input/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_library(input linux_input.cpp)
+add_library(linux_input linux_input.cpp)
 
-target_include_directories(input
+target_include_directories(linux_input 
     PUBLIC ${PROJECT_SOURCE_DIR}/include
     PUBLIC ${PROJECT_SOURCE_DIR}/platform/linux/include
 )
