--- a/platform/linux/source/render/CMakeLists.txt
+++ b/platform/linux/source/render/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_library(render linux_render.cpp)
+add_library(linux_render linux_render.cpp)
 
-target_include_directories(render
+target_include_directories(linux_render 
     PUBLIC ${PROJECT_SOURCE_DIR}/include
     PUBLIC ${PROJECT_SOURCE_DIR}/platform/linux/include
 )
