--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,7 @@ add_subdirectory(source/engine)
 if (UNIX)
     add_subdirectory(platform/linux/source/input)
     add_subdirectory(platform/linux/source/render)
+    add_subdirectory(platform/linux/source/path)
+else (WIN32)
+    add_subdirectory(platform/windows/source/path)
 endif()
