--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ if (UNIX)
     add_subdirectory(platform/linux/source/input)
     add_subdirectory(platform/linux/source/render)
     add_subdirectory(platform/linux/source/path)
+    add_subdirectory(platform/linux/source/network)
 else (WIN32)
     add_subdirectory(platform/windows/source/path)
 endif()
