--- a/source/engine/CMakeLists.txt
+++ b/source/engine/CMakeLists.txt
@@ -7,6 +7,7 @@ target_link_libraries(engine
     PRIVATE util
     PRIVATE render
 	PRIVATE path
+    PRIVATE network
 )
 
 target_include_directories(engine PUBLIC ${PROJECT_SOURCE_DIR}/include)
