[Feat]WPF <-> dll 연동 테스트중

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,17 @@ project(
 
 add_subdirectory(source/board)
 add_subdirectory(source/game_rule)
-add_subdirectory(source/tetris)
 add_subdirectory(source/tetromino)
 add_subdirectory(source/util)
 add_subdirectory(source/engine)
 if (UNIX)
     add_subdirectory(platform/linux/source/input)
     add_subdirectory(platform/linux/source/render)
+endif()
+if (WIN32)
+    add_subdirectory(platform/Terminal/input)
+    add_subdirectory(platform/Terminal/render)
+
+    # 실행파일(terminal_main.exe)
+    add_subdirectory(platform/Terminal/main)
 endif()
