--- a/source/board/CMakeLists.txt
+++ b/source/board/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_library(board board.cpp)
+add_library(board board.cpp) 
 
 target_include_directories(board PUBLIC ${PROJECT_SOURCE_DIR}/include)
+
+set_target_properties(board PROPERTIES CXX_STANDARD 17)
