--- a/source/tetris/CMakeLists.txt
+++ b/source/tetris/CMakeLists.txt
@@ -3,7 +3,13 @@ add_executable(tetris
 )
 
 target_link_libraries(tetris
-	PRIVATE engine
+	PRIVATE render
+	PRIVATE game_rule
+	PRIVATE console_input
+	PRIVATE board
+	PRIVATE tetromino
+    PRIVATE util
+	PRIVATE Engine
 )
 
 if (UNIX)
