[Feat]WPF <-> dll 연동

--- a/platform/wpf/wpf_dll/source/render/CMakeLists.txt
+++ b/platform/wpf/wpf_dll/source/render/CMakeLists.txt
@@ -1,3 +1,4 @@
-add_library(renderer_adapter wpf_renderer_adapter.cpp)
+add_library(wpf_render wpf_renderer.cpp)
 
-target_include_directories(board PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(wpf_render PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(wpf_render PUBLIC ${PROJECT_SOURCE_DIR}/platform/wpf/wpf_dll/include)
