--- a/platform/wpf/wpf_dll/source/input/CMakeLists.txt
+++ b/platform/wpf/wpf_dll/source/input/CMakeLists.txt
@@ -1,3 +1,4 @@
-add_library(input_handler_adapter wpf_input_handler_adapter.cpp)
+add_library(wpf_input wpf_input_handler.cpp)
 
-target_include_directories(board PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(wpf_input PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(wpf_input PUBLIC ${PROJECT_SOURCE_DIR}/platform/wpf/wpf_dll/include)
