--- a/platform/windows/path/CMakeLists.txt
+++ b/platform/windows/path/CMakeLists.txt
@@ -1,4 +1,4 @@
-target_sources(path PRIVATE windows_path.cpp)
+target_sources(path PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/windows_path.cpp)
 
 target_include_directories(path
     PUBLIC ${PROJECT_SOURCE_DIR}/include
