--- a/source/engine/CMakeLists.txt
+++ b/source/engine/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(engine engine.cpp)
+add_library(engine engine.cpp solo_engine.cpp multi_engine.cpp)
 
 target_link_libraries(engine
 	PRIVATE game_rule
