[Fix] Change cmake file that cause build error
Signed-off-by: Choi Yusun <tanks2438@outlook.kr>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,17 +12,19 @@ add_subdirectory(source/game_rule)
 add_subdirectory(source/tetromino)
 add_subdirectory(source/util)
 add_subdirectory(source/engine)
+
 if (UNIX)
     add_subdirectory(platform/linux/source/input)
     add_subdirectory(platform/linux/source/render)
     add_subdirectory(platform/linux/source/path)
     add_subdirectory(platform/linux/source/network)
-else (WIN32)
-    add_subdirectory(platform/windows/source/path)
-endif()
-if (WIN32)
+
+    # 실행파일(linux)
+    add_subdirectory(source/tetris)
+elseif (WIN32)
     add_subdirectory(platform/Terminal/input)
     add_subdirectory(platform/Terminal/render)
+    add_subdirectory(platform/windows/source/path)
 
     # 실행파일(terminal_main.exe)
     add_subdirectory(platform/Terminal/main)
