--- a/source/engine/CMakeLists.txt
+++ b/source/engine/CMakeLists.txt
@@ -6,8 +6,9 @@ target_link_libraries(engine
 	PRIVATE tetromino
     PRIVATE util
     PRIVATE render
-	PRIVATE path
+    PRIVATE path
     PRIVATE network
+    PRIVATE input
 )
 
 target_include_directories(engine PUBLIC ${PROJECT_SOURCE_DIR}/include)
