[Feat]멀티플레이 UI 구현

--- a/platform/wpf/wpf.csproj
+++ b/platform/wpf/wpf.csproj
@@ -17,6 +17,9 @@
     <Compile Update="SettingWindow.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="ConnectWindow.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
