--- a/platform/Terminal/main/CMakeLists.txt
+++ b/platform/Terminal/main/CMakeLists.txt
@@ -1,14 +1,15 @@
-add_executable(terminal_main terminal_main.cpp)
+add_executable(main terminal_main.cpp)
 
-target_include_directories(terminal_main PRIVATE ${PROJECT_SOURCE_DIR}/platform/Terminal)
+target_include_directories(main PRIVATE ${PROJECT_SOURCE_DIR}/platform/Terminal)
 
-target_link_libraries(terminal_main
+target_link_libraries(main
     PRIVATE
         engine
         board
         game_rule
         tetromino
         util
-        terminal_input
-        terminal_render
+        input
+        render
+        network
 )
