--- a/platform/Terminal/network/CMakeLists.txt
+++ b/platform/Terminal/network/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_library(terminal_network terminal_network.cpp)
+add_library(network terminal_network.cpp)
 
-target_include_directories(terminal_network PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(network PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
