--- a/platform/Terminal/input/CMakeLists.txt
+++ b/platform/Terminal/input/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_library(terminal_input terminal_input.cpp)
+add_library(input terminal_input.cpp)
 
-target_include_directories(terminal_input PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(input PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
