--- a/platform/Terminal/render/CMakeLists.txt
+++ b/platform/Terminal/render/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_library(terminal_render terminal_renderer.cpp)
+add_library(render terminal_renderer.cpp)
 
-target_include_directories(terminal_render PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(render PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
