--- a/platform/linux/source/path/CMakeLists.txt
+++ b/platform/linux/source/path/CMakeLists.txt
@@ -1,5 +1,6 @@
-target_sources(path PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/linux_path.cpp)
+add_library(path linux_path.cpp)
 
 target_include_directories(path
     PUBLIC ${PROJECT_SOURCE_DIR}/include
+    PUBLIC ${PROJECT_SOURCE_DIR}/platform/linux/include
 )
