--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,10 @@ project(
   LANGUAGES CXX
 )
 
-option(USE_WPF "Build WPF UI" ON)
+option(USE_WPF "Build WPF UI" OFF)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 add_subdirectory(source/board)
 add_subdirectory(source/game_rule)
@@ -34,7 +37,6 @@ elseif (WIN32)
 
     # 윈도우 터미널 UI 빌드 -> terminal_main.exe 생성
     else()
-        add_subdirectory(platform/windows/path)
         add_subdirectory(platform/Terminal/input)
         add_subdirectory(platform/Terminal/render)
         add_subdirectory(platform/Terminal/network)
