--- a/source/util/CMakeLists.txt
+++ b/source/util/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(util rand_gen.cpp timer.cpp path.cpp)
+add_library(util rand_gen.cpp timer.cpp)
 
 target_include_directories(util PUBLIC ${PROJECT_SOURCE_DIR}/include)
