--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.11)
+cmake_minimum_required(VERSION 3.26)
 
 project(
   ModooCode
@@ -7,9 +7,16 @@ project(
   LANGUAGES CXX
 )
 
+# 윈도우 std::byte 오류 해결용
+if (WIN32)
+    add_compile_definitions(_HAS_STD_BYTE=0)
+endif()
+
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_CLANG_TIDY
     clang-tidy;
-    -warnings-as-errors=*
+    -warnings-as-errors=*;
 )
 
 option(USE_WPF "Build WPF UI" OFF)
