[refact] terminal 폴더명 진짜 변경 CMAKE도 변경

--- a/platform/Terminal/input/CMakeLists.txt
+++ b/platform/Terminal/input/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(input terminal_input.cpp)
+add_library(input "terminal-input.cpp")
 
 target_include_directories(input PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
