--- a/platform/Terminal/network/CMakeLists.txt
+++ b/platform/Terminal/network/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(network terminal_network.cpp)
+add_library(network "terminal-network.cpp")
 
 target_include_directories(network PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
