--- a/core/source/engine/CMakeLists.txt
+++ b/core/source/engine/CMakeLists.txt
@@ -1,13 +1,13 @@
 add_library(engine engine.cpp solo_engine.cpp multi_engine.cpp)
 
+target_include_directories(engine 
+	PUBLIC ${PROJECT_SOURCE_DIR}/api	
+	PUBLIC ${PROJECT_SOURCE_DIR}/core/include
+)
+
 target_link_libraries(engine
     PRIVATE game_rule
 	PRIVATE board
 	PRIVATE tetromino
     PRIVATE util
-    PRIVATE render
-    PRIVATE network
-    PRIVATE input
 )
-
-target_include_directories(engine PUBLIC ${PROJECT_SOURCE_DIR}/include)
