--- a/platform/linux/source/render/CMakeLists.txt
+++ b/platform/linux/source/render/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(render linux_render.cpp)
 
 target_include_directories(render 
-    PUBLIC ${PROJECT_SOURCE_DIR}/include
+    PUBLIC ${PROJECT_SOURCE_DIR}/api
+    PUBLIC ${PROJECT_SOURCE_DIR}/core/include
     PUBLIC ${PROJECT_SOURCE_DIR}/platform/linux/include
 )
