--- a/platform/wpf/wpf_dll/source/input/CMakeLists.txt
+++ b/platform/wpf/wpf_dll/source/input/CMakeLists.txt
@@ -1,4 +1,10 @@
-add_library(wpf_input wpf_input_handler.cpp)
+add_library(input wpf_input_handler.cpp)
 
-target_include_directories(wpf_input PUBLIC ${PROJECT_SOURCE_DIR}/include)
-target_include_directories(wpf_input PUBLIC ${PROJECT_SOURCE_DIR}/platform/wpf/wpf_dll/include)
+target_include_directories(input 
+	PUBLIC ${PROJECT_SOURCE_DIR}/api
+	PUBLIC ${PROJECT_SOURCE_DIR}/core/include
+)
+
+target_include_directories(input 
+	PUBLIC ${PROJECT_SOURCE_DIR}/platform/wpf/wpf_dll/include
+)
