--- a/platform/wpf/wpf_dll/source/render/CMakeLists.txt
+++ b/platform/wpf/wpf_dll/source/render/CMakeLists.txt
@@ -1,4 +1,10 @@
-add_library(wpf_render wpf_renderer.cpp)
+add_library(render wpf_renderer.cpp)
 
-target_include_directories(wpf_render PUBLIC ${PROJECT_SOURCE_DIR}/include)
-target_include_directories(wpf_render PUBLIC ${PROJECT_SOURCE_DIR}/platform/wpf/wpf_dll/include)
+target_include_directories(render 
+	PUBLIC ${PROJECT_SOURCE_DIR}/api
+	PUBLIC ${PROJECT_SOURCE_DIR}/core/include
+)
+
+target_include_directories(render 
+	PUBLIC ${PROJECT_SOURCE_DIR}/platform/wpf/wpf_dll/include
+)
