--- a/platform/linux/source/input/CMakeLists.txt
+++ b/platform/linux/source/input/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(input linux_input.cpp)
 
 target_include_directories(input 
-    PUBLIC ${PROJECT_SOURCE_DIR}/include
+    PUBLIC ${PROJECT_SOURCE_DIR}/api
+    PUBLIC ${PROJECT_SOURCE_DIR}/core/include
     PUBLIC ${PROJECT_SOURCE_DIR}/platform/linux/include
 )
