--- a/platform/linux/source/network/CMakeLists.txt
+++ b/platform/linux/source/network/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(network linux_network.cpp)
 
 target_include_directories(network
-    PUBLIC ${PROJECT_SOURCE_DIR}/include
+    PUBLIC ${PROJECT_SOURCE_DIR}/api
+    PUBLIC ${PROJECT_SOURCE_DIR}/core/include
     PUBLIC ${PROJECT_SOURCE_DIR}/platform/linux/include
 )
