--- a/platform/wpf/wpf_dll/source/callback/CMakeLists.txt
+++ b/platform/wpf/wpf_dll/source/callback/CMakeLists.txt
@@ -1,7 +1,10 @@
 add_library(engine_wrapper SHARED engine_wrapper.cpp)
 
-target_include_directories(engine_wrapper PUBLIC ${PROJECT_SOURCE_DIR}/include)
-target_include_directories(engine_wrapper PRIVATE ${PROJECT_SOURCE_DIR}/platform/wpf/wpf_dll/include)
+target_include_directories(engine_wrapper 
+    PUBLIC ${PROJECT_SOURCE_DIR}/api
+    PUBLIC ${PROJECT_SOURCE_DIR}/core/include
+    PRIVATE ${PROJECT_SOURCE_DIR}/platform/wpf/wpf_dll/include
+)
 
 target_link_libraries(engine_wrapper
     PRIVATE
