--- a/platform/wpf/wpf_dll/source/callback/CMakeLists.txt
+++ b/platform/wpf/wpf_dll/source/callback/CMakeLists.txt
@@ -9,10 +9,6 @@ target_include_directories(engine_wrapper
 target_link_libraries(engine_wrapper
     PRIVATE
         engine
-        board
-        game_rule
-        tetromino
-        util
-        wpf_input
-        wpf_render
+        input
+        render
 )
