[refact] 파일구조, 이름 변경 리눅스 터미널과 동일하게

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,13 +53,12 @@ elseif (WIN32)
         add_subdirectory(platform/wpf/wpf_dll/source/input)
         add_subdirectory(platform/wpf/wpf_dll/source/render)
         add_subdirectory(platform/wpf/wpf_dll/source/callback)
-
-    # 윈도우 터미널 UI 빌드 -> terminal_main.exe 생성
+    # 윈도우 터미널 UI 빌드 -> window_main.exe 생성
     else()
-        add_subdirectory(platform/Terminal/input)
-        add_subdirectory(platform/Terminal/render)
-        add_subdirectory(platform/Terminal/network)
-        add_subdirectory(platform/Terminal/main)
+        add_subdirectory(platform/window/source/input)
+        add_subdirectory(platform/window/source/render)
+        add_subdirectory(platform/window/source/network)
+        add_subdirectory(platform/window/source/main)
     endif()
 
 endif()
