[Refact] Add test to util and board
Signed-off-by: Choi Yusun <tanks2438@outlook.kr>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,7 +24,7 @@ add_custom_target(linux-test
 enable_testing()
 
 add_subdirectory(core/util)
-#add_subdirectory(core/board)
+add_subdirectory(core/board)
 #add_subdirectory(core/game_rule)
 #add_subdirectory(core/tetromino)
 #add_subdirectory(core/engine)
@@ -37,7 +37,7 @@ add_executable(
 
 target_link_libraries(
     unit_test
-#    board_test
+    $<TARGET_OBJECTS:board_test>
 #    game_rule_test
 #    tetromino_test
     $<TARGET_OBJECTS:util_test>
