[refact] add tests for TetrominoQueue and Tetromino

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,7 +26,7 @@ enable_testing()
 add_subdirectory(core/util)
 #add_subdirectory(core/board)
 #add_subdirectory(core/game_rule)
-#add_subdirectory(core/tetromino)
+add_subdirectory(core/tetromino)
 #add_subdirectory(core/engine)
 #add_subdirectory(core/tetris)
 
@@ -39,7 +39,7 @@ target_link_libraries(
     unit_test
 #    board_test
 #    game_rule_test
-#    tetromino_test
+    $<TARGET_OBJECTS:tetromino_test>
     $<TARGET_OBJECTS:util_test>
 #    engine_test
 #    tetris_test
