--- a/test/core/tetromino/CMakeLists.txt
+++ b/test/core/tetromino/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_library(tetromino_test tetromino_test.cpp) 
+add_library(tetromino_test tetromino_test.cpp tetromino_queue_test.cpp) 
+
+target_link_libraries(tetromino_test GTest::gtest)
 
 target_include_directories(tetromino_test PUBLIC ${PROJECT_SOURCE_DIR}/core/include)
 
