[feat] 메뉴 , 설정 렌더링 추가 게임반복실행 가능

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,9 @@ elseif (WIN32)
         add_subdirectory(platform/window/source/render)
         add_subdirectory(platform/window/source/network)
         add_subdirectory(platform/window/source/main)
+        #터미널 구조에 맞게 수정했습니다. 
+    # 윈도우 터미널 UI 빌드 -> tetris.exe 생성
+
     endif()
 
 endif()
