[Fix] fix build fail

--- a/platform/window/source/ip_resolver/CMakeLists.txt
+++ b/platform/window/source/ip_resolver/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(ip_resolver window_ip_resolver.cpp)
 
-target_include_directories(network 
+target_include_directories(ip_resolver 
     PUBLIC ${PROJECT_SOURCE_DIR}/api
     PUBLIC ${PROJECT_SOURCE_DIR}/core/include
     PUBLIC ${PROJECT_SOURCE_DIR}/platform/window/include
