--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_subdirectory(core/source/game_rule)
 add_subdirectory(core/source/tetromino)
 add_subdirectory(core/source/util)
 add_subdirectory(core/source/engine)
+add_subdirectory(core/source/ip_resolver)
 
 # 리눅스 터미널 UI 빌드
 if (UNIX)
@@ -58,8 +59,9 @@ elseif (WIN32)
         add_subdirectory(platform/window/source/input)
         add_subdirectory(platform/window/source/render)
         add_subdirectory(platform/window/source/network)
-        add_subdirectory(platform/window/source/ip_resolver)
         add_subdirectory(platform/window/source/ip_resolver_network)
+        add_subdirectory(platform/window/source/ip_resolver_renderer)
+        add_subdirectory(platform/window/source/ip_resolver_input_handler)
         add_subdirectory(platform/window/source/main)
         add_subdirectory(platform/window/source/util)
         #터미널 구조에 맞게 수정했습니다. 
