[Feat]세팅 저장용 파일 생성

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -20,7 +20,11 @@
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
-      "inheritEnvironments": [ "clang_cl_x64_x64" ],
+      "inheritEnvironments": [
+        "windows-msvc-x64",
+        "clang_cl_x64_x64"
+      ],
+      "intelliSenseMode": "windows-clang-x64",
       "variables": []
     }
   ]
