--- a/platform/window/source/main/CMakeLists.txt
+++ b/platform/window/source/main/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(tetris
 	tetris.cpp
- "../render/menu.cpp")
+ "../render/menu.cpp"
+)
 
 target_include_directories(tetris 
     PRIVATE ${PROJECT_SOURCE_DIR}/api
