--- a/platform/window/source/main/CMakeLists.txt
+++ b/platform/window/source/main/CMakeLists.txt
@@ -1,20 +1,25 @@
 add_executable(tetris
 	tetris.cpp
- "../render/menu.cpp"
 )
 
 target_include_directories(tetris 
     PRIVATE ${PROJECT_SOURCE_DIR}/api
     PRIVATE ${PROJECT_SOURCE_DIR}/core/include
+    PRIVATE ${PROJECT_SOURCE_DIR}/menu/include
+    PUBLIC ${PROJECT_SOURCE_DIR}/platform/common/api
+    PUBLIC ${PROJECT_SOURCE_DIR}/platform/common/include
 	PUBLIC ${PROJECT_SOURCE_DIR}/platform/window/include
 )
 
 target_link_libraries(tetris
     PRIVATE
         engine
+        menu
         input
-        render
         network
+        common_render
+        window_render
+        window_util
         ip_resolver
         ip_resolver_network
         ip_resolver_renderer
