--- a/menu/source/CMakeLists.txt
+++ b/menu/source/CMakeLists.txt
@@ -2,16 +2,15 @@ file(GLOB RENDER_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
 )
 
-add_library(window_render 
+add_library(menu 
     ${RENDER_SOURCES}
  )
 
-target_include_directories(window_render
+target_include_directories(menu 
     PUBLIC ${PROJECT_SOURCE_DIR}/api
     PUBLIC ${PROJECT_SOURCE_DIR}/core/include
-    PUBLIC ${PROJECT_SOURCE_DIR}/menu/include
     PUBLIC ${PROJECT_SOURCE_DIR}/menu/api
+    PUBLIC ${PROJECT_SOURCE_DIR}/menu/include
     PUBLIC ${PROJECT_SOURCE_DIR}/platform/common/api
     PUBLIC ${PROJECT_SOURCE_DIR}/platform/common/include
-    PUBLIC ${PROJECT_SOURCE_DIR}/platform/window/include
 )
