[Refact] setting 폴더 분리

--- a/menu/source/CMakeLists.txt
+++ b/menu/source/CMakeLists.txt
@@ -1,9 +1,9 @@
-file(GLOB RENDER_SOURCES
+file(GLOB ALL_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
 )
 
 add_library(menu 
-    ${RENDER_SOURCES}
+    ${ALL_SOURCES}
  )
 
 target_include_directories(menu 
@@ -11,6 +11,7 @@ target_include_directories(menu
     PUBLIC ${PROJECT_SOURCE_DIR}/core/include
     PUBLIC ${PROJECT_SOURCE_DIR}/menu/api
     PUBLIC ${PROJECT_SOURCE_DIR}/menu/include
+    PUBLIC ${PROJECT_SOURCE_DIR}/setting/include
     PUBLIC ${PROJECT_SOURCE_DIR}/platform/common/api
     PUBLIC ${PROJECT_SOURCE_DIR}/platform/common/include
 )
