--- a/platform/window/source/main/CMakeLists.txt
+++ b/platform/window/source/main/CMakeLists.txt
@@ -7,15 +7,18 @@ target_include_directories(tetris
     PRIVATE ${PROJECT_SOURCE_DIR}/core/include
     PRIVATE ${PROJECT_SOURCE_DIR}/menu/api
     PRIVATE ${PROJECT_SOURCE_DIR}/menu/include
-    PUBLIC ${PROJECT_SOURCE_DIR}/platform/common/api
-    PUBLIC ${PROJECT_SOURCE_DIR}/platform/common/include
-	PUBLIC ${PROJECT_SOURCE_DIR}/platform/window/include
+    PRIVATE ${PROJECT_SOURCE_DIR}/setting/api
+    PRIVATE ${PROJECT_SOURCE_DIR}/setting/include
+    PRIVATE ${PROJECT_SOURCE_DIR}/platform/common/api
+    PRIVATE ${PROJECT_SOURCE_DIR}/platform/common/include
+	PRIVATE ${PROJECT_SOURCE_DIR}/platform/window/include
 )
 
 target_link_libraries(tetris
     PRIVATE
         engine
         menu
+        setting
         input
         network
         common_render
