--- a/platform/window/source/util/CMakeLists.txt
+++ b/platform/window/source/util/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(window_util shadow_maker.cpp setting_storage.cpp)
+add_library(window_util shadow_maker.cpp)
 
 target_include_directories(window_util 
     PUBLIC ${PROJECT_SOURCE_DIR}/api
