--- a/setting/source/CMakeLists.txt
+++ b/setting/source/CMakeLists.txt
@@ -2,11 +2,11 @@ file(GLOB ALL_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
 )
 
-add_library(window_render 
+add_library(setting 
     ${ALL_SOURCES}
-)
+ )
 
-target_include_directories(window_render
+target_include_directories(setting 
     PUBLIC ${PROJECT_SOURCE_DIR}/api
     PUBLIC ${PROJECT_SOURCE_DIR}/core/include
     PUBLIC ${PROJECT_SOURCE_DIR}/menu/api
@@ -15,5 +15,4 @@ target_include_directories(window_render
     PUBLIC ${PROJECT_SOURCE_DIR}/setting/include
     PUBLIC ${PROJECT_SOURCE_DIR}/platform/common/api
     PUBLIC ${PROJECT_SOURCE_DIR}/platform/common/include
-    PUBLIC ${PROJECT_SOURCE_DIR}/platform/window/include
 )
