--- a/core/source/engine/CMakeLists.txt
+++ b/core/source/engine/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(engine engine.cpp solo_engine.cpp multi_engine.cpp)
 target_include_directories(engine 
 	PUBLIC ${PROJECT_SOURCE_DIR}/api	
 	PUBLIC ${PROJECT_SOURCE_DIR}/core/include
+	PUBLIC ${PROJECT_SOURCE_DIR}/setting/include
 )
 
 target_link_libraries(engine
