--- a/test/platform/window/util/CMakeLists.txt
+++ b/test/platform/window/util/CMakeLists.txt
@@ -5,6 +5,7 @@ target_link_libraries(shadow_maker_test GTest::gtest)
 target_include_directories(shadow_maker_test
 	PUBLIC ${PROJECT_SOURCE_DIR}/api
 	PUBLIC ${PROJECT_SOURCE_DIR}/core/include
+	PUBLIC ${PROJECT_SOURCE_DIR}/platform/common/include
 	PUBLIC ${PROJECT_SOURCE_DIR}/platform/window/include
 )
 
